--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -374,6 +374,9 @@ jobs:
       id-token: write
 
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
