--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,10 @@ jobs:
             base_ref="origin/$base_ref"
           fi
 
+          # Print all changed files
+          echo "Changed files:"
+          git diff --name-only $base_ref HEAD
+
           github_changes=$(git diff --name-only $base_ref HEAD | grep -q ^.github/ && echo 'true' || echo 'false')
           backend=$(git diff --name-only $base_ref HEAD | grep -Eq '^Lighthouse.Backend(/|.Tests/)' || [ "$github_changes" == "true" ] && echo 'true' || echo 'false')
           frontend=$(git diff --name-only $base_ref HEAD | grep -q ^Lighthouse.Frontend/ || [ "$github_changes" == "true" ] && echo 'true' || echo 'false')
