--- a/Lighthouse.EndToEndTests/package.json
+++ b/Lighthouse.EndToEndTests/package.json
@@ -6,7 +6,9 @@
     "lint": "eslint \"**/*.ts\" --report-unused-disable-directives --max-warnings 0",
     "build": "tsc",
     "test": "playwright test",
-    "test-local": "docker run -p 8888:8080 -d --restart always --name lighthouse_test ghcr.io/letpeoplework/lighthouse:latest && cross-env LIGHTHOUSEURL=http://localhost:8888 npm run test && docker stop lighthouse_test && docker rm lighthouse_test"
+    "test-docker": "npm run docker-start && cross-env LIGHTHOUSEURL=http://localhost:8888 npm run test && npm run docker-stop",
+    "docker-start": "docker ps --filter \"name=lighthouse_test\" --filter \"status=running\" -q > /dev/null || (docker start lighthouse_test || docker run -p 8888:8080 -d --restart always --name lighthouse_test ghcr.io/letpeoplework/lighthouse:latest) && npx wait-on http://localhost:8888",
+    "docker-stop": "docker stop lighthouse_test && docker rm lighthouse_test"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +21,10 @@
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@typescript-eslint/parser": "^8.17.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.17.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2",
-    "cross-env": "^7.0.3"
+    "wait-on": "^8.0.1"
   }
 }
