--- a/Lighthouse.EndToEndTests/package.json
+++ b/Lighthouse.EndToEndTests/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint \"**/*.ts\" --report-unused-disable-directives --max-warnings 0",
     "build": "tsc",
     "test": "playwright test",
-    "test-docker": "npm run docker-start && cross-env LIGHTHOUSEURL=http://localhost:8888 npm run test && npm run docker-stop",
+    "test-docker": "npm run docker-start && cross-env LIGHTHOUSEURL=http://localhost:8888 cross-env CI=true npm run test && npm run docker-stop",
     "docker-start": "docker ps --filter \"name=lighthouse_test\" --filter \"status=running\" -q > /dev/null || (docker start lighthouse_test || docker run -p 8888:8080 -d --restart always --name lighthouse_test ghcr.io/letpeoplework/lighthouse:latest) && npx wait-on http://localhost:8888",
     "docker-stop": "docker stop lighthouse_test && docker rm lighthouse_test"
   },
