--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -389,8 +389,9 @@ jobs:
     needs:
       - tag
       - packageapp
+      - changes
 
-    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
+    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]' && (needs.changes.outputs.frontend == 'true' || needs.changes.outputs.backend == 'true')
 
     environment:
       name: 'Production'
