--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -398,6 +398,19 @@ jobs:
           path: ./Lighthouse.EndToEndTests/playwright-report/
           retention-days: 30
 
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+    
+      - name: Tag docker image with version
+        run: |
+          docker pull ghcr.io/${{ github.repository }}:dev-latest
+          docker tag ghcr.io/${{ github.repository }}:dev-latest ghcr.io/${{ github.repository }}:${{ needs.tag.outputs.version }}
+          docker push ghcr.io/${{ github.repository }}:${{ needs.tag.outputs.version }}
+
   deploy:
     runs-on: ubuntu-latest
     needs:
@@ -494,14 +507,18 @@ jobs:
         with:
           fetch-depth: '0'
 
-      - name: Build and publish a Docker image for ${{ github.repository }}
-        uses: macbre/push-to-ghcr@master        
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          image_name: ${{ github.repository }} 
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Lighthouse.Backend/Dockerfile          
-          build_arg: VERSION=${{ needs.tag.outputs.fileversion }}
-          image_tag: ${{ needs.tag.outputs.version }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+    
+      - name: Tag docker image with latest
+        run: |
+          docker pull ghcr.io/${{ github.repository }}:${{ needs.tag.outputs.version }}
+          docker tag ghcr.io/${{ github.repository }}:${{ needs.tag.outputs.version }} ghcr.io/${{ github.repository }}:latest
+          docker push ghcr.io/${{ github.repository }}:latest
 
       - uses: actions/download-artifact@v4
         with:
