--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -342,7 +342,7 @@ jobs:
       - packageapp
       - changes
 
-    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
+    #if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
     permissions: write-all
 
@@ -355,14 +355,34 @@ jobs:
         with:
           node-version: 20
 
-      - name: Build and publish a Docker image for ${{ github.repository }}
-        uses: macbre/push-to-ghcr@master        
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          image_name: ${{ github.repository }} 
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          build_arg: VERSION=${{ needs.tag.outputs.fileversion }}
-          dockerfile: Lighthouse.Backend/Dockerfile
-          image_tag: dev-latest
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          # Automatically sets up the default builder
+          use: true
+
+      - name: Build and push multi-platform Docker image
+        run: |
+          REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          VERSION=${{ needs.tag.outputs.fileversion }}
+
+          # Define platforms you want to support
+          PLATFORMS="linux/amd64,linux/arm64"
+
+          # Build and push the multi-platform image
+          docker buildx build --platform $PLATFORMS \
+            --file Lighthouse.Backend/Dockerfile \
+            --tag ghcr.io/$REPO_NAME:$VERSION \
+            --tag ghcr.io/$REPO_NAME:dev-latest \
+            --build-arg VERSION=$VERSION \
+            --push .
 
       - name: Install E2E dependencies
         run: npm ci
@@ -397,13 +417,6 @@ jobs:
           name: playwright-report-docker
           path: ./Lighthouse.EndToEndTests/playwright-report/
           retention-days: 30
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
     
       - name: Tag docker image with version
         run: |
