--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -339,7 +339,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - tag
-      - packageapp
+      #- packageapp
       - changes
 
     #if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
@@ -366,12 +366,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           # Automatically sets up the default builder
-          use: true
-
-      - name: Set up QEMU for cross-platform builds
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: linux/amd64,linux/arm64        
+          use: true    
 
       - name: Build and push multi-platform Docker image
         run: |
@@ -379,7 +374,7 @@ jobs:
           VERSION=${{ needs.tag.outputs.fileversion }}
 
           # Define platforms you want to support
-          PLATFORMS="linux/amd64,linux/arm64"
+          PLATFORMS="linux/amd64,linux/arm64,linux/arm"
 
           # Build and push the multi-platform image
           docker buildx build --platform $PLATFORMS --no-cache \
@@ -422,13 +417,6 @@ jobs:
           name: playwright-report-docker
           path: ./Lighthouse.EndToEndTests/playwright-report/
           retention-days: 30
-    
-      - name: Tag docker image with version
-        run: |
-          REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          docker pull ghcr.io/$REPO_NAME:dev-latest
-          docker tag ghcr.io/$REPO_NAME:dev-latest ghcr.io/$REPO_NAME:${{ needs.tag.outputs.version }}
-          docker push ghcr.io/$REPO_NAME:${{ needs.tag.outputs.version }}
 
   deploy:
     runs-on: ubuntu-latest
