--- a/Lighthouse.Backend/Dockerfile
+++ b/Lighthouse.Backend/Dockerfile
@@ -1,15 +1,15 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 ARG VERSION=DEV
 WORKDIR /src
 COPY ["Lighthouse.Backend/Lighthouse.Backend.csproj", "Lighthouse.Backend/"]
-RUN dotnet restore "./Lighthouse.Backend/Lighthouse.Backend.csproj"
+RUN dotnet restore "./Lighthouse.Backend/Lighthouse.Backend.csproj" -a "$TARGETARCH"
 COPY . .
 WORKDIR "/src/Lighthouse.Backend"
 RUN dotnet build "Lighthouse.Backend.csproj" -c "$BUILD_CONFIGURATION" -o /app/build
@@ -23,7 +23,7 @@ RUN npm install --ignore-scripts \
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 COPY --from=node-builder /node/dist ./wwwroot
-RUN dotnet publish "./Lighthouse.Backend.csproj" -c "$BUILD_CONFIGURATION" -o /app/publish \
+RUN dotnet publish "./Lighthouse.Backend.csproj" -a "$TARGETARCH" -c "$BUILD_CONFIGURATION" -o /app/publish \
 /p:UseAppHost=false -p:PublishSingleFile=false -p:Version="$VERSION" --no-self-contained
 
 FROM base AS final
