--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@melloware/react-logviewer": "^6.1.1",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.3.0",
     "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.2.1",
