--- a/Lighthouse.Backend.Tests/Lighthouse.Backend.Tests.csproj
+++ b/Lighthouse.Backend.Tests/Lighthouse.Backend.Tests.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<Nullable>enable</Nullable>
-
+		<PlatformTarget>x64</PlatformTarget>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 	</PropertyGroup>
