--- a/Lighthouse.Backend/appsettings.json
+++ b/Lighthouse.Backend/appsettings.json
@@ -38,7 +38,18 @@
   "ConnectionStrings": {
     "LighthouseAppContext": "Data Source=LighthouseAppContext.db"
   },
+  "Certificate": {
+    "Path": "certs/LighthouseCert.pfx",
+    "Password": ""
+  },
   "EncryptionSettings": {
     "EncryptionKey": "uH2VbF5hOW0/huLOH1Q2L0g+P3J9dG43cknQK7t9R5M="
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:5001"
+      }
+    }
   }
 }
