--- a/Lighthouse.Backend/Dockerfile
+++ b/Lighthouse.Backend/Dockerfile
@@ -1,8 +1,10 @@
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 5001
+
+# Copy the default certificate
+COPY certs/aspnetapp.pfx /app/certs/aspnetapp.pfx
 
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
