--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -307,7 +307,7 @@ jobs:
       - name: Wait for Lighthouse to start
         run: |
           echo "Waiting for server to be ready..."
-          timeout 30 bash -c 'until curl --silent --fail http://localhost:5000; do sleep 1; done'
+          timeout 30 bash -c 'until curl --silent --fail https://localhost:5001; do sleep 1; done'
           echo "Server is ready!"
 
           cat lighthouse.log
@@ -318,7 +318,7 @@ jobs:
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
         env:
-          LIGHTHOUSEURL: http://localhost:5000
+          LIGHTHOUSEURL: https://localhost:5001
   
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
@@ -394,13 +394,13 @@ jobs:
         working-directory: ./Lighthouse.EndToEndTests
           
       - name: Run Lighthouse
-        run: docker run -p 8080:8080 -d --restart always ghcr.io/letpeoplework/lighthouse:dev-latest
+        run: docker run -p 5001:5001 -d --restart always ghcr.io/letpeoplework/lighthouse:dev-latest
         working-directory: ./Lighthouse.Backend
 
       - name: Wait for Lighthouse to start
         run: |
           echo "Waiting for server to be ready..."
-          timeout 30 bash -c 'until curl --silent --fail http://localhost:8080; do sleep 1; done'
+          timeout 30 bash -c 'until curl --silent --fail https://localhost:5001; do sleep 1; done'
           echo "Server is ready!"
   
       - name: Run Playwright tests
@@ -408,7 +408,7 @@ jobs:
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
         env:
-          LIGHTHOUSEURL: http://localhost:8080
+          LIGHTHOUSEURL: https://localhost:5001
   
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
