Fix issues introduced with https in CI Pipeline

--- a/Lighthouse.Backend/Dockerfile
+++ b/Lighthouse.Backend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 EXPOSE 5001
 
 # Copy the default certificate
-COPY certs/LighthouseCert.pfx /app/certs/LighthouseCert.pfx
+COPY Lighthouse.Backend/certs/LighthouseCert.pfx /app/certs/LighthouseCert.pfx
 
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
