--- a/Lighthouse.Backend/appsettings.json
+++ b/Lighthouse.Backend/appsettings.json
@@ -47,6 +47,9 @@
   },
   "Kestrel": {
     "Endpoints": {
+      "Http": {
+        "Url": "http://*:5000"
+      },
       "Https": {
         "Url": "https://*:5001"
       }
