--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -394,7 +394,7 @@ jobs:
         working-directory: ./Lighthouse.EndToEndTests
           
       - name: Run Lighthouse
-        run: docker run -p 5001:5001 -d --restart always ghcr.io/letpeoplework/lighthouse:dev-latest
+        run: docker run -p 5001:5001 -d --name lighthouse --restart always ghcr.io/letpeoplework/lighthouse:dev-latest
         working-directory: ./Lighthouse.Backend
 
       - name: Wait for Lighthouse to start
@@ -402,13 +402,17 @@ jobs:
           echo "Waiting for server to be ready..."
           timeout 30 bash -c 'until curl --silent --fail --insecure https://localhost:5001; do sleep 1; done'
           echo "Server is ready!"
-  
+      
       - name: Run Playwright tests
         run: npx playwright test
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
         env:
           LIGHTHOUSEURL: https://localhost:5001
+
+      - name: Print Docker logs
+        if: always()
+        run: docker logs lighthouse
   
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
