Add CI step to remove Kestrel HTTPS endpoint
A new step named "Remove Kestrel HTTPS endpoint" has been added to the CI pipeline. This step uses the `jq` command to delete the `.Kestrel.Endpoints.Https` property from the `Lighthouse.Backend/appsettings.json` file and then replaces the original file with the modified one. This step is executed in the `./Lighthouse.Backend` working directory.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -456,6 +456,11 @@ jobs:
         run: npm run build
         working-directory: ./Lighthouse.Frontend
 
+      - name: Remove Kestrel HTTPS endpoint
+        run: |
+          jq 'del(.Kestrel.Endpoints.Https)' Lighthouse.Backend/appsettings.json > tmp.$$.json && mv tmp.$$.json Lighthouse.Backend/appsettings.json
+        working-directory: ./Lighthouse.Backend
+
       - name: publish app-service
         run: dotnet publish -c Release /p:UseAppHost=false -p:PublishSingleFile=false --no-self-contained -p:Version=${{ needs.tag.outputs.fileversion }} -o ./publish/app-service
         working-directory: ./Lighthouse.Backend
