Update ci.yml: simplify HTTPS removal, remove publish step
Simplified the path for removing the Kestrel HTTPS endpoint by targeting the `appsettings.json` file directly in the `Lighthouse.Backend` directory. Removed the app-service publish step, indicating a possible change in the deployment process or a shift in responsibilities.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -458,7 +458,7 @@ jobs:
 
       - name: Remove Kestrel HTTPS endpoint
         run: |
-          jq 'del(.Kestrel.Endpoints.Https)' Lighthouse.Backend/appsettings.json > tmp.$$.json && mv tmp.$$.json Lighthouse.Backend/appsettings.json
+          jq 'del(.Kestrel.Endpoints.Https)' appsettings.json > tmp.$$.json && mv tmp.$$.json appsettings.json
         working-directory: ./Lighthouse.Backend
 
       - name: publish app-service
