--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -459,6 +459,7 @@ jobs:
       - name: Remove Kestrel HTTPS endpoint
         run: |
           jq 'del(.Kestrel.Endpoints.Https)' appsettings.json > tmp.$$.json && mv tmp.$$.json appsettings.json
+          jq '.Kestrel.Endpoints.Http.Url = "http://*:8000"' appsettings.json > tmp.$$.json && mv tmp.$$.json appsettings.json
         working-directory: ./Lighthouse.Backend
 
       - name: publish app-service
