--- a/Lighthouse.EndToEndTests/package.json
+++ b/Lighthouse.EndToEndTests/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint \"**/*.ts\" --report-unused-disable-directives --max-warnings 0",
     "build": "tsc",
+    "prebuild": "npx @biomejs/biome check --write ./tests",
     "test": "playwright test",
     "test-docker": "npm run docker-start && cross-env LIGHTHOUSEURL=https://localhost:8888 cross-env CI=true npm run test && npm run docker-stop",
     "docker-start": "docker ps --filter \"name=lighthouse_test\" --filter \"status=running\" -q > /dev/null || (docker start lighthouse_test || docker run -p 8888:5001 -d --restart always --name lighthouse_test ghcr.io/letpeoplework/lighthouse:dev-latest) && npx wait-on https://localhost:8888",
@@ -15,16 +15,11 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@biomejs/biome": "1.9.4",
     "@playwright/test": "*",
-    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.10.3",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
-    "@typescript-eslint/parser": "^8.19.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.17.0",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.0",
     "wait-on": "^8.0.1"
   }
 }
