Adjust for using docs with custom domain name
- Adjust url in _config
- Add CNAME file
- Publish CNAME file together with page

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ title: Lighthouse Documentation
 description: Documentation for Lighthouse.
 theme: just-the-docs
 
-url: https://letpeoplework.github.io/lighthouse
+url: https://docs.lighthouse.letpeople.work
 
 logo: "/assets/Logo.png"
 color_scheme: dark
