--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,14 +22,14 @@ force_polling: true
 
 callouts:
   note:
-    title: Note
     color: yellow
   definition:
     title: Definition
     color: blue
   important:
-    title: Important
     color: red
+  recommendation:
+    color: green
 
 aux_links:
   Let People Work: https://letpeople.work
