--- a/Lighthouse.EndToEndTests/package.json
+++ b/Lighthouse.EndToEndTests/package.json
@@ -23,5 +23,11 @@
     "cross-env": "^7.0.3",
     "typescript": "^5.7.3",
     "wait-on": "^8.0.2"
+  },
+  "dependencies": {
+    "@types/pixelmatch": "^5.2.6",
+    "@types/pngjs": "^6.0.5",
+    "pixelmatch": "^6.0.0",
+    "pngjs": "^7.0.0"
   }
 }
