--- a/Lighthouse.EndToEndTests/package.json
+++ b/Lighthouse.EndToEndTests/package.json
@@ -18,7 +18,7 @@
   "description": "",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@playwright/test": "*",
+    "@playwright/test": "^1.50.0",
     "@types/node": "^22.10.10",
     "cross-env": "^7.0.3",
     "typescript": "^5.7.3",
