--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,7 +168,7 @@ jobs:
       run: npm install
       working-directory: ./Lighthouse.EndToEndTests
 
-    - name: Build Frontend
+    - name: Build E2E Tests
       if: needs.changes.outputs.e2e == 'true'
       run: npm run build
       working-directory: ./Lighthouse.EndToEndTests
@@ -315,7 +315,7 @@ jobs:
         working-directory: ./Lighthouse.Backend/publish/linux-x64
   
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npm run test
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
         env:
@@ -405,7 +405,7 @@ jobs:
           echo "Server is ready!"
       
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npm run test
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
         env:
@@ -541,3 +541,60 @@ jobs:
           tag: ${{ needs.tag.outputs.version }}
           prerelease: true
           name: "Lighthouse ${{ needs.tag.outputs.version }}"
+
+  screenshot:
+    runs-on: ubuntu-latest
+    needs:
+      - tag
+      #- release
+    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
+    
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+
+      - name: Install E2E dependencies
+        run: npm ci
+        shell: bash
+        working-directory: ./Lighthouse.EndToEndTests
+  
+      - name: Install Chromium
+        run: npx playwright install chromium --with-deps
+        shell: bash
+        working-directory: ./Lighthouse.EndToEndTests
+        
+      - name: Run Lighthouse
+        run: docker run -p 5001:5001 -d --name lighthouse --restart always ghcr.io/letpeoplework/lighthouse:dev-latest
+        working-directory: ./Lighthouse.Backend
+
+      - name: Wait for Lighthouse to start
+        run: |
+          echo "Waiting for server to be ready..."
+          timeout 30 bash -c 'until curl --silent --fail --insecure https://localhost:5001; do sleep 1; done'
+          echo "Server is ready!"
+      
+      - name: Run Playwright tests
+        run: npm run screenshots
+        shell: bash
+        working-directory: ./Lighthouse.EndToEndTests
+        env:
+          LIGHTHOUSEURL: https://localhost:5001
+
+      - name: Configure git
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+      - name: Commit new screenshots
+        run: |
+          git add .
+          git commit -m "Updating screenshot for version ${{ needs.tag.outputs.version }}" || echo "No changes to commit"
+          git status
+
+      - name: Print Docker logs
+        if: always()
+        run: docker logs lighthouse
+
+
+      
