--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -14,12 +14,7 @@ jobs:
   screenshot:
     runs-on: ubuntu-latest
     name: Recreate and upload new Screenshots
-
-    permissions:
-        contents: write
-        checks: write
-        pull-requests: write
-        statuses: write
+    permissions: write-all
     
     steps:
       - uses: actions/checkout@v4
