Trigger screenshot workflow every time main ci is completed (aka new release is created)

--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -6,8 +6,9 @@ env:
     JiraLighthouseIntegrationTestToken: ${{ secrets.JIRALIGHTHOUSEINTEGRATIONTESTTOKEN }}
     AzureDevOpsLighthouseE2ETestToken: ${{secrets.AZUREDEVOPSLIGHTHOUSEE2ETESTTOKEN}}
 on:
-  release:
-    types: [published]
+  workflow_run:
+    workflows: ["Build And Deploy Lighthouse"]
+    types: [completed]
   workflow_dispatch:
 
 jobs:
@@ -24,8 +25,9 @@ jobs:
       - name: Set version
         id: version
         run: |
-          if [ "${{ github.event_name }}" = "release" ]; then
-            echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+          if [ "${{ github.event_name }}" = "workflow_run" ]; then
+            LATEST_TAG=$(git describe --tags --abbrev=0)
+            echo "VERSION=${LATEST_TAG#v}" >> $GITHUB_OUTPUT
           else
             echo "VERSION=dev-latest" >> $GITHUB_OUTPUT
           fi
