on run screenshots if run of ci on main was successful

--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -9,6 +9,7 @@ on:
   workflow_run:
     workflows: ["Build And Deploy Lighthouse"]
     types: [completed]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
