Adjust release creation in CI to use PAT Trigger Screenshots on created release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -541,3 +541,4 @@ jobs:
           tag: ${{ needs.tag.outputs.version }}
           prerelease: true
           name: "Lighthouse ${{ needs.tag.outputs.version }}"
+          token: ${{ secrets.RELEASE_CREATION_TOKEN}}
