--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -6,10 +6,8 @@ env:
     JiraLighthouseIntegrationTestToken: ${{ secrets.JIRALIGHTHOUSEINTEGRATIONTESTTOKEN }}
     AzureDevOpsLighthouseE2ETestToken: ${{secrets.AZUREDEVOPSLIGHTHOUSEE2ETESTTOKEN}}
 on:
-  workflow_run:
-    workflows: ["Build And Deploy Lighthouse"]
-    types: [completed]
-    branches: [main]
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
@@ -26,9 +24,8 @@ jobs:
       - name: Set version
         id: version
         run: |
-          if [ "${{ github.event_name }}" = "workflow_run" ]; then
-            LATEST_TAG=$(git describe --tags --abbrev=0)
-            echo "VERSION=${LATEST_TAG#v}" >> $GITHUB_OUTPUT
+          if [ "${{ github.event_name }}" = "release" ]; then
+            echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
           else
             echo "VERSION=dev-latest" >> $GITHUB_OUTPUT
           fi
