--- a/Lighthouse.Backend/appsettings.json
+++ b/Lighthouse.Backend/appsettings.json
@@ -39,8 +39,7 @@
     "LighthouseAppContext": "Data Source=LighthouseAppContext.db"
   },
   "Certificate": {
-    "Path": "certs/LighthouseCert.pfx",
-    "Password": ""
+    "Path": "certs/LighthouseCert.pfx"
   },
   "EncryptionSettings": {
     "EncryptionKey": "uH2VbF5hOW0/huLOH1Q2L0g+P3J9dG43cknQK7t9R5M="
