--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,6 @@ on:
     branches: [ "main" ]
   workflow_dispatch:  
 
-# Allow one concurrent deployment when on main
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: false
-
 jobs:
 
   changes:
@@ -176,6 +171,10 @@ jobs:
   tag:
     runs-on: ubuntu-latest
     permissions: write-all
+
+    concurrency:
+      group: tag-${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: false
 
     needs: 
       - frontend
@@ -428,6 +427,10 @@ jobs:
     needs:
       - tag
       - packageapp
+
+    concurrency:
+      group: deploy-${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: false
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
